--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,10 @@
 html{
   height: 200%;
-  
+ width: 100%; 
 }
 body {
   height: 100%;
+  width: 100%; 
   display: flex;
   flex-direction: column;
   justify-content: space-between;
