--- a/src/footer/style.css
+++ b/src/footer/style.css
@@ -1,5 +1,5 @@
 .footer{
-    background-color: blue;
+    background: linear-gradient(to right, #27559a, #3b94de);
 height: 12%;
 }
 .footer-mean-container{
